--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22.1)
-project(ExampleGame)
+project(Pong)
 
 if(EXISTS "${CMAKE_BINARY_DIR}/conan_toolchain.cmake")
     include("${CMAKE_BINARY_DIR}/conan_toolchain.cmake")
@@ -17,7 +17,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 
 find_package(SDL2 REQUIRED)
 
-add_executable(ExampleGame src/main.cpp
+add_executable(Pong src/main.cpp
     src/Engine/Game.cpp
     include/Game.hpp
     src/Engine/Utils.cpp
@@ -28,4 +28,4 @@ add_executable(ExampleGame src/main.cpp
     include/Player.hpp
 )
 
-target_link_libraries(ExampleGame SDL2::SDL2 SDL2::SDL2main)
+target_link_libraries(Pong SDL2::SDL2 SDL2::SDL2main)
